fixed some spacing and stuff

--- a/MærkeDageCalender/Shared/NavMenu.razor.css
+++ b/MærkeDageCalender/Shared/NavMenu.razor.css
@@ -11,9 +11,9 @@
     font-size: 1.1rem;
 }
 
-.oi {
-    width: 2rem;
-    font-size: 1.1rem;
+.ion {
+    width: 3rem;
+    font-size: 1.8rem;
     vertical-align: text-top;
     top: -2px;
 }
